--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0;
     font-family: Inter, sans-serif;
 }
 
@@ -23,8 +24,10 @@ header {
 }
 
 .destination-card {
-    margin-top: 100px;
+    margin-top: 25px;
     display: flex;
+    border-bottom: 1px solid #f5f5f5;
+    padding-bottom: 30px;
 }
 
 .destination-card--info {
@@ -70,4 +73,12 @@ header {
 
 .destination-card--description {
     margin-top: 10px;
+    margin-bottom: 10px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+}
+
+main {
+    padding: 40px;
 }
